--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,11 @@
 @use '@angular/material' as mat;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 
